insertion theme dans html

--- a/theme/footer.html
+++ b/theme/footer.html
@@ -26,6 +26,16 @@ Credits: https://stackoverflow.com/a/37518822/736151
         bottom: 3%;
         right: 3%;
     }
+    .left {
+	float: left;
+	width: 45%;
+	max-height: 95%;
+    }
+    .right {
+	float: right;
+	width: 45%;
+	max-height: 95%;
+    }
 </style>
 
 <!-- 2. Create hidden header/footer <div> -->
